--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Webside from Ushanti
 email: ushantilp+homepage@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Personal Website from Ushanti (ushantilp)
-baseurl: "https://ushantilp.github.io" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: Ushanti_
 github_username:  Ushantilp
