--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: ushantilp+homepage@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Personal Website from Ushanti (ushantilp)
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: Ushanti_
 github_username:  Ushantilp
 
